added skeleton files for sequences - still needs testing

--- a/main.tex
+++ b/main.tex
@@ -115,6 +115,7 @@
   \mainmatter
   %    Include main chapters here.
   \include{}
+  \include{sequences/sequences.tex}
   
   \appendix
   %    Include appendix "chapters" here.
