added maths and fullpage packages

--- a/main.tex
+++ b/main.tex
@@ -34,10 +34,11 @@
 %
 %    Remove any commented or uncommented macros you do not use.
 
-\documentclass[11pt, atpaper]{article}
+\documentclass[11pt, a4paper]{article}
 
   %    For use when working on individual chapters
   %\includeonly{}
+  \usepackage{amsmath,amssymb,mathtools,fullpage}
   
   %    Include referenced packages here.
   
