preamble(): removed indents at start of paragraphs

--- a/main.tex
+++ b/main.tex
@@ -46,6 +46,9 @@
   %    "Instructions for preparation of papers and monographs:
   %    AMS-LaTeX" (instr-l.pdf in the AMS-LaTeX distribution).
   %\makeindex
+
+  % Remove all indents at the start of each paragraph
+  \setlength\parindent{0pt}
   
   \begin{document}
   
