added tcolorbox package

--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt, a4paper]{article}
 
 
-  \usepackage{amsmath,amssymb,mathtools,fullpage}
+  \usepackage{amsmath,amssymb,mathtools,fullpage,tcolorbox}
   
 
   % Remove all indents at the start of each paragraph
