moved preamble to separate file

--- a/main.tex
+++ b/main.tex
@@ -1,12 +1,7 @@
 \documentclass[11pt, a4paper]{article}
 
-
-  \usepackage{amsmath,amssymb,mathtools,fullpage}
-  \usepackage[most]{tcolorbox}
-  % tcolorbox examples https://www.overleaf.com/15278510qxhzhbddqvxs#/57818949/
-
-  % Remove all indents at the start of each paragraph
-  \setlength\parindent{0pt}
+  % Preamble
+  \input{preamble.tex}
   
   \begin{document}
   
