renamed boxedExample to BoxedExample for easier identification

--- a/preamble.tex
+++ b/preamble.tex
@@ -19,7 +19,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % BoxedExample - Boxes throughout the text denoted 'Example' that are intended to demonstrate a particular mathematical example.
-\newcommand{\boxedExample}[1]{
+\newcommand{\BoxedExample}[1]{
   \begin{tcolorbox}[enhanced,
     attach boxed title to top left,
     colback=blue!5!white,
