--- a/preamble.tex
+++ b/preamble.tex
@@ -21,7 +21,7 @@
 % BoxedExample - Boxes throughout the text denoted 'Example' that are intended to demonstrate a particular mathematical example.
 \newcommand{\BoxedExample}[1]{
   \begin{tcolorbox}[enhanced,
-    attach boxed title to top left,
+    attach boxed title to top left={yshift=-3mm, yshifttext=-1mm, xshift=3mm},
     colback=blue!5!white,
     colframe=blue!75!black,
     colbacktitle=red!80!black,
